--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3992,7 +3992,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.2.t:0 "Foundation of Hürriyet ve İtilâf Fırkası"
  ottoman.2.d:0 "İttihat ve Terakki Fırkası has been dominating our elections for a long time. Disorganized and disunited opposition remains insufficient in putting up a true opposition to the İttihadists. Yet recent developments in the Ottoman political scene still promises hope.\nWith the unification of several opposition parties, namely decentralist liberal Ahrar Fırkası, Mutedil Hürriyetperveran Fırkası which consistet of mostly liberal Albanian and Arab representatives, and a party founded by several influential İttihadists called Osmanlı Demokrat Fırkası stands as a broad coalition of many anti-İttihadist parties."
  ottoman.2.a:0 "Finally a united opposition against the İttihadists."
- ottoman.2.tt:0 "\n\n§YActivation Effect:§! §YOpposition Officers§! will be known as §Yİtilafist Officers§!"
+ ottoman.2.tt:0 "\n§YOpposition Officers§! will be known as §Yİtilafist Officers§!"
  ottoman.3.t:0 "Success of Hürriyet ve İtilaf Fırkası in the By-Elections"
  ottoman.3.d:0 "Not long has passed from the formation of Hürriyet ve İtilaf Fırkası yet they already secured a huge victory. HİF won an overwhelming majority in Istanbul, which was earlier an İttihatist stronghold. As the main elections are approaching, some can't help but wonder what will happen to them, especially since popularity of Hürriyet ve İtilaf Fırkası has skyrocketed recently. Many expect a backslash from the İttihatist for these events."
  ottoman.3.a:0 "We must adress this "issue"."
