RAJ temp political tree change UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10696,7 +10696,8 @@ RAJ_survey_of_india_reward:0 "\nCompleting this focus will unlock several §YExc
 RAJ_survey_of_india_reward2:0 "\nCompleting both this focus and the §YForeign and Political Departments§! focus will unlock the £GFX_decision_icon_small §YSimla Convention§! decision."
 RAJ_hardinge_ascension:0 "Lord Hardinge Ascendency"
 RAJ_hardinge_ascension_desc:0 ""
-RAJ_indian_diplomacy:0 "Indian Diplomacy"
+RAJ_hardinge_ascension_reward:0 "\n§RThis focus will automatically be completed once§! §YCharles Hardinge§! §Rsucceeds§! §YGilbert Elliot§! §Ras Viceroy and Governor-General of India.§!"
+RAJ_indian_diplomacy:0 "Propaganda Campaigns in India"
 RAJ_indian_diplomacy_desc:0 ""
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
