--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5043,28 +5043,66 @@
  TUR_end_of_an_era:0 "End of an Era"
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
- 
+
+ TUR_ottoman_fourth_army:0 "Ottoman Fourth Army"
+ TUR_ottoman_fourth_army_desc:0 "Ahmed Cemâl Paşa has been sent to Syria with the intention of centralizing and reforming the region. Apart from this mission, his second role in the region is to organize the 4th Ottoman army and defend the provinces against foreign invasions. As Cemâl Paşa step foot on the territory, it seemed that significant reforms would be required to reorganize the army."
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
+ TUR_rely_on_civilian_shipyards:0 "Rely on Civilian Shipyards"
+ TUR_rely_on_civilian_shipyards_desc:0 "Industry of Syria cannot support large scale modern naval production. As building a naval dockyard from scratch would require too much resources, we will rely on civilian shipyards for the moment."
+ TUR_reorganize_the_army:0 "Reorganize the Army"
+ TUR_reorganize_the_army_desc:0 "It's apparent that the Army stationed in Syria remains disorganized just like the rest of the empire. Before enacting any other regional army reforms, we have to first reorganize the army."
  TUR_reorganize_the_army_tt:0 "Modify §YOttoman 4th Army§! by\n£organization_texticon  Division Organization: §G+5.0%§!\n£army_morale_texticon  Division Recovery Rate: §G+5.0%§!\n\n"
+ TUR_import_firearms:0 "Import Firearms"
+ TUR_import_firearms_desc:0 "Our regional commands lacks modern firearms to compete with other regional foes. By importing firearms from the central government, we can slowly close our deficit."
  TUR_import_firearms_tt:0 "Through these decisions, we'll be able to improve §Ydivision attack§! and §Ydefense§! of §YOttoman 4th Army§! national spirit."
+ TUR_acquire_heavy_artillery:0 "Acquire Heavy Artillery"
+ TUR_acquire_heavy_artillery_desc:0 "Our officers within the army has reported that we have a severe lack of heavy artillery in our armed forces stationed in the region. If we want to conduct military operations, we have to bring more artillery pieces from the central government."
  TUR_acquire_heavy_artillery_tt:0 "Through these decisions, we'll be able to improve §Yartillery attack§! and §Ydefense§! of §YOttoman 4th Army§! national spirit."
+ TUR_syrian_conscriptions:0 "Syrian Conscriptions"
+ TUR_syrian_conscriptions_desc:0 "When we formed the regional army in the region, we raised our battalions and divisions with the intention of conscripting the troops from the Syrian population. While the Syrian Arab population is doing its best to avoid conscription just like the rest of the empire, we'll attend the issue personally and increase forceful conscription.."
  TUR_syrian_conscriptions_tt:0 "Modify §YOttoman 4th Army§! by\n£manpower_texticon  Recruitable Population: §Y1.50%§!\n\nUnlocks £decision_icon_small  §YArab Conscription§! Decisions.\nThese decisions will let us earn additional §Ymanpower§! from §YSyrian§! states. The effect of these decisions will be determined by §YArab Opposition§! national spirit.\n"
+ TUR_desert_reconnisance:0 "Desert Reconnisance"
+ TUR_desert_reconnisance_desc:0 "The geographical limitations of Syria and the Arab region makes it harder for us to implement conventional military tactics. In such a region, reconnisance is more important than any other frontier, helping us to both spot the enemy and gain us knowledge about the surrounding terrain."
  TUR_desert_reconnisance_tt:0 "Modify §YOttoman 4th Army§! by\n£recon_texticon  Reconnaissance: §G+10.0%§!\n£terrain_penalty_texticon  Terrain Penalty Reduction: §G+10.0%§!\n£recon_texticon  Recon Bonus While Entrenched: §G+5.0%§!\n\n"
+ TUR_desert_training:0 "Desert Training"
+ TUR_desert_training_desc:0 "As our army command will be operating in a region with vast deserts, it's important to adopt our army to the local terrain and climate. If we train our army for the hardships of the region, we can have a better performance on the frontline."
  TUR_desert_training_tt:0 "Modify §YOttoman 4th Army§! by\n£attrition_hot_texticon  Heat Attrition: §G-10.00%§!\n£training_speed_texticon  Training time: §G-5.00%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\n"
+ TUR_increased_garrisons:0 "Increased Garrisons"
+ TUR_increased_garrisons_desc:0 "While Syria is an integral inseparable part of our empire, it's far from an ideal province. To avoid getting stabbed in the back, we have to increase local garrisons and keep our backs safe."
  TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
+ TUR_improve_army_command:0 "Improve Army Command"
+ TUR_improve_army_command_desc:0 "Just like in the central government, our armed forces are far from a coherent modern force. As a part of the problemü our commanders and officers still remain incompetent. In order to stand a chance against our enemies, we have to modernize the command structure."
  TUR_improve_army_command_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
+ TUR_appoint_kucuk_cemal:0 "Appoint Küçük Cemal"
+ TUR_appoint_kucuk_cemal_desc:0 "Our regional command, though has successful commanders, still needs other military figures to carry out its operations. With that reason, we'll request the appointment of Mehmed Cemal Paşa, also known as Mersinli of Küçük Cemal Paşa to the 4th Ottoman Army in the region."
  TUR_appoint_kucuk_cemal_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
+ TUR_defense_of_syria:0 "Defense of Syria"
+ TUR_defense_of_syria_desc:0 "While many high ranking members of İttihat ve Terakki propose a full on expedition towards Egypt, its mostly motivated by political goals and does not stand as a successful possible military maneuver. As Zeki Paşa proposes, we should be focusing on the defense of Syria in order to not lose what we already have."
  TUR_defense_of_syria_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Add Defense Skill §G1§!"
+ TUR_prepare_for_the_egyptian_expedition:0 "Prepare for the Egyptian Expedition"
+ TUR_prepare_for_the_egyptian_expedition_desc:0 "While many military figures deem it as unrealistic, we should prepare for a full-on expedition towards Egypt. Motivated by political goals, Ahmed Cemâl Paşa aims to be the second conqueror of Egypt. Even if his goal to fully capitulate egyp fails, the policy will be a good unifying direction for the region and our war effort."
  TUR_prepare_for_the_egyptian_expedition_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Joins §Y[TUR.GetNameDef]§!"
+ TUR_integrate_intelligence_to_the_army:0 "Integrate Intelligence to the Army"
+ TUR_integrate_intelligence_to_the_army_desc:0 "As the Special Organization already has a large sway over the country in the central government, their expertise in intelligence and paramilitary operations can be used for our benefits. By integrating them into our army, we can commence our own intelligence operations."
+ TUR_integrate_intelligence_to_the_army_tt:0 "Modify §YOttoman 4th Army§! by\n£political_power_texticon  Subversive activities cost: §G-5%§!\n£operatives_spies_texticon  Operative slots: §G+1§!\n£spy_network_gain_texticon  Intel network strength gain factor: §G+15%§!\n\n"
+ TUR_integrate_intelligence_to_the_army_tt_no_lar:0 "Modify §YOttoman 4th Army§! by\n£political_power_texticon  Subversive activities cost: §G-25%§!\n\n"
+ TUR_allign_with_bedouin_tribes:0 "Allign with Bedouin Tribes"
+ TUR_allign_with_bedouin_tribes_desc:0 "Bedouin tribes are a set of Arabic tribes in Palestine, Transjordan and Sinai. As these tribes stand in the middle of one of our frontiers, securing their loyalty is important for our military goals. Through various gifts and concessions, we can utilize their forces against our enemies"
  TUR_allign_with_bedouin_tribes_tt:0 "Creates a division template named §YBedouin Camelry Corp§!.\n"
  TUR_allign_with_bedouin_tribes_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n"
  TUR_allign_with_bedouin_tribes_tt3:0 "Unlocks £decision_icon_small  §YRaise Bedouin Volunteers§! Decisions. These decisions will let us get §Yfurther troops§! while improving the effects of §YBedouin Support§! national spirit at a cost.\n"
- TUR_war_propaganda_tt:0 "£decision_icon_small  §YWar Propaganda§! decision will be selected even if we're not at war and without no requirements at a reduced cost from §Y150§! to §Y50§!.\n£decision_icon_small  §YExhort Heroism§! decision's cost will be reduced from from §Y100§! to §Y50§!.\n£decision_icon_small  §YEncourage Frugality§! decision's cost will be reduced from from §Y100§! to §Y50§!.\n£decision_icon_small  §YBolster Spirits§! decision's cost will be reduced from from §Y100§! to §Y50§!.\n£decision_icon_small  §YRadio Propaganda§! decision will be selected even if we're not at war at a reduced cost from §Y75§! to §Y50§!.\n"
- TUR_integrate_intelligence_to_the_army_tt:0 "Modify §YOttoman 4th Army§! by\n£political_power_texticon  Subversive activities cost: §G-5%§!\n£operatives_spies_texticon  Operative slots: §G+1§!\n£spy_network_gain_texticon  Intel network strength gain factor: §G+15%§!\n\n"
- TUR_integrate_intelligence_to_the_army_tt_no_lar:0 "Modify §YOttoman 4th Army§! by\n£political_power_texticon  Subversive activities cost: §G-25%§!\n\n"
+ TUR_fortify_syria:0 "Fortify Syria"
+ TUR_fortify_syria_desc:0 "According to Zeki Paşa, best method of establishing a successful defense in Syria can be achieved through strategic fortification. By constructing forts in our border, strategic fall-back lines and significant population centres, we can have a strong defence against possible enemies."
+ TUR_popular_egyptian_resistance:0 "Popular Egyptian Resistance"
+ TUR_popular_egyptian_resistance_desc:0 "Even if we happen to go to war with Egypt, the Egyptian population would never support a war against the Caliph. As this war would be seen as an imperialist war, various political groups would object this conflict. One of these groups could be named as the National Party, a pro-independence nationalist party. Since we have no intention of occupying Egypt, we can safely allign with this party to hinder their current government's war effort."
  TUR_popular_egyptian_resistance_tt:0 "Unlocks operations to boost opposition in Egypt.\n§R(Requires having built an Intelligence Agency)§!."
  TRS_increase_egyptian_opposition:0 "Boost Egyptian Opposition"
  TRS_increase_egyptian_opposition_desc:0 "Egyptian population and aristocracy for the most part still stands loyal to the Ottoman Caliph and Pan-Islamist ideals. As we're embroiled in a war with them, we can stir up the Egyptian opposition to sabotage the war effort of our enemies."
+ TUR_war_propaganda:0 "War Propaganda"
+ TUR_war_propaganda_desc:0 "One of the reasons of Cemâl's decision to prepare for the invasion of Egypt is to set up a goal to boost the popular support for war. By increasing war propaganda in our Syrian provinces, we can prepare our population for war, even during peace times."
+ TUR_war_propaganda_tt:0 "£decision_icon_small  §YWar Propaganda§! decision will be selected even if we're not at war and without no requirements at a reduced cost from §Y150§! to §Y50§!.\n£decision_icon_small  §YExhort Heroism§! decision's cost will be reduced from from §Y100§! to §Y50§!.\n£decision_icon_small  §YEncourage Frugality§! decision's cost will be reduced from from §Y100§! to §Y50§!.\n£decision_icon_small  §YBolster Spirits§! decision's cost will be reduced from from §Y100§! to §Y50§!.\n£decision_icon_small  §YRadio Propaganda§! decision will be selected even if we're not at war at a reduced cost from §Y75§! to §Y50§!.\n"
+ TUR_instigate_egyptian_rebellion:0 "Instigate Egyptian Rebellion"
+ TUR_instigate_egyptian_rebellion_desc:0 "Even if we had fought a war several decades ago, many parts of the Egyptian society still supports our potential rule. From bureaucracy to the clergy, common population to low ranking conscripts, Egyptian society sees the Ottoman Pan-Islamist ideals and the authority of the Caliph as the legitimate force. Through prmoting these ideals throughout the Egyptian society, we can force possible force a revolt or perhaps an all-out revolution."
  TUR_instigate_egyptian_rebellion_tt:0 "Unlocks operations to start revolution in Egypt.\n§R(Requires having built an Intelligence Agency)§!."
 
  FRA_ww1_dreyfus_exoneration:0 "Dreyfus Exoneration Aftermath"
