--- a/localisation/english/replace/replace_modifiers_l_english.yml
+++ b/localisation/english/replace/replace_modifiers_l_english.yml
@@ -532,8 +532,6 @@
  neutrality_acceptance:0 "£ai_acceptance_texticon  Acceptance of Authoritarian Diplomacy"
  #cat_mobile_warfare_cost_factor:0 "Maneuver Superiority Doctrine Cost"
  #cat_mass_assault_cost_factor:0 "Cult of Offensive Doctrine Cost"
- tank_manufacturer_cost_factor:1 "Armour Designer Cost"
- tank_manufacturer_cost_factor_MIO:1 "Armour §YMilitary Industrial Organization§! cost"
  scout_plane_design_cost_factor:0 "Recon Plane Unit Design Cost"
  MODIFIER_RESEARCH_SPEED_FACTOR:2 "£research_speed_texticon  Research Speed"
  MODIFIER_RESEARCH_SPEED_FACTOR_DESC:1 "Decreases the time it takes to research a new technology."
@@ -1774,7 +1772,7 @@
  MODIFIER_FEMALE_DIVISIONAL_COMMANDER_CHANCE:0 "£officer_texticon  Female Divisional Commander Chance"
  
  excavation_tech_research: "£research_speed_electronics_texticon  Excavation Technology Research Speed"
- tank_manufacturer_cost_factor_MIO: "£mio_tank_cost_texticon  Tank §YMilitary Industrial Organization§! cost"
+ tank_manufacturer_cost_factor_MIO: "£mio_tank_cost_texticon  Armour §YMilitary Industrial Organization§! cost"
  naval_manufacturer_cost_factor_MIO: "£mio_naval_cost_texticon  Naval §YMilitary Industrial Organization§! cost"
  aircraft_manufacturer_cost_factor_MIO: "£mio_air_cost_texticon  Aircraft §YMilitary Industrial Organization§! cost"
  materiel_manufacturer_cost_factor_MIO: "£mio_materiel_cost_texticon  Materiel §YMilitary Industrial Organization§! cost"
