--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1987,12 +1987,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_add_debt_current_amount_USA:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods_opposite|.1%Y]\n\n"
  empty_space:0 " \n"
  TUR_dissolve_the_debt_council_tooltip:0 "£consumer_goods_texticon  Consumer Goods Factories factor value for §YOttoman Public Debt Administration§! is §Y0.0%§!"
- TUR_domestic_weapon_research_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\nDivision Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
- TUR_domestic_weapon_research_nsb_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\nDivision Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
- TUR_domestic_weapon_research_nsb_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\nDivision Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!\n"
- TUR_domestic_weapon_production_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\nDivision Attack: §G+3.0%§!\n£defence_texticon  Division Defense: §G+3.0%§!\n\n"
- TUR_domestic_weapon_production_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\nDivision Attack: [?TUR_aoabe_army_attack_factor_tt|%G1]\n£defence_texticon  Division Defense: [?TUR_aoabe_army_defence_factor_tt|%G1]\n\n"
- TUR_domestic_weapon_production_tt3:0 "\nModify [TUR_army_of_a_bygone_era_name] by\nDivision Attack: §R-3.0%§!\n£defence_texticon  Division Defense: §R-3.0%§!\n\n"
+ TUR_domestic_weapon_research_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
+ TUR_domestic_weapon_research_nsb_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
+ TUR_domestic_weapon_research_nsb_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!\n"
+ TUR_domestic_weapon_production_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+3.0%§!\n£defence_texticon  Division Defense: §G+3.0%§!\n\n"
+ TUR_domestic_weapon_production_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: [?TUR_aoabe_army_attack_factor_tt|%G1]\n£defence_texticon  Division Defense: [?TUR_aoabe_army_defence_factor_tt|%G1]\n\n"
+ TUR_domestic_weapon_production_tt3:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §R-3.0%§!\n£defence_texticon  Division Defense: §R-3.0%§!\n\n"
  TUR_has_land_connection_tt:0 "Has §Ydirect land connection§! to §Y[FROM.GetName]§! through §Yallied§! countries"
  TUR_has_land_connection_GER_tt:0 "Has §Ydirect land connection§! to §Y[GER.GetName]§! through §Yallied§! countries"
  TUR_investing_in_the_sick_man:0 "Investing in the Sick Man"
@@ -2039,10 +2039,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_harbiye_nezareti_decision_category:0 "Harbiye Nezâreti"
  TUR_modernization_of_the_high_command:0 "Modernization of the High Command"
  TUR_modernization_of_the_high_command_desc:0 "Even though our equipments are up to european standards, we simply lack commanders capable of giving efficient orders to use them. We have to train our officers up to European standards."
- TUR_modernization_of_the_high_command_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Organization: §G+5.0%§!\n"
+ TUR_modernization_of_the_high_command_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£organization_texticon  Division Organization: §G+5.0%§!\n"
  TUR_army_conscription_reforms:0 "Army Conscription Reforms"
  TUR_army_conscription_reforms_desc:0 "Our empire has failed to achieve modern European style conscription standards for decades. As our officers are capable of giving contemporary military orders, we can finally work towards fixing the conscription issue."
- TUR_modernization_of_the_conscription_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Experience Gain: §G+2.0%§!\n£manpower_texticon  Recruitable Population: §G2%§!\nDivision Recovery Rate: §G+1.0%§!\nTraining time: §G-2.00%§!\n"
+ TUR_modernization_of_the_conscription_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£experience_neutral_texticon  Division Experience Gain: §G+2.0%§!\n£manpower_texticon  Recruitable Population: §G2%§!\n£army_morale_texticon  Division Recovery Rate: §G+1.0%§!\n£training_speed_texticon  Training time: §G-2.00%§!\n"
  as_idea_TUR_army_of_bygone_era:0 "Has national spirit §YArmy of a Bygone Era§!"
  not_has_idea_TUR_army_of_bygone_era:0 "Does not have national spirit §YArmy of a Bygone Era§!"
  TUR_army_factionalism_decision_category:0 "Army Factionalism"
