RAJ Propaganda Campaigns Mechanic UPDATE (Partially finished)

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8779,26 +8779,28 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_expand_military_industry:0 "Expand Military Industry"
  RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
 
- RAJ_indian_diplomacy_category:0 "Indian diplomacy"
- this_soldier_is_defending_india:0 "This Soldier is Defending India"
- sons_of_the_empire:0 "Sons of the Empire"
- our_indian_warriors:0 "Our Indian Warriors"
- following_in_the_footsteps_of_dod:0 "Following in the Footsteps of the Dear Old Dad"
- outwhiskered:0 "Outwhiskered!"
- for_india_and_for_empire:0 "For India and for Empire"
- our_dusky_allies:0 "Our Dusky Allies"
- who_got_money_gun_uniform:0 "Who got that Money, Gun and Uniform?"
- invest_in_victory:0 "Invest in Victory"
+ RAJ_indian_diplomacy_category:0 "Propaganda Campaigns"
+ RAJ_indian_diplomacy_category_desc:0 "§YPropaganda Campaigns§! in the Raj are one of the many ways in which our administration maintains its hold on the subcontinent. They are essential to keep the Indian people united and to ensure their support of the [ENG.GetFlag] §YBritish rule§!. However, we cannot run too many §YPropaganda Campaigns§! at once, as this would overload the Indian population, therefore we are limited to §Rthree Propaganda Campaigns§! at a time.\n\nCurrently, we are leading [?indian_diplomacy|Y0]/§Y3 Propaganda Campaigns§!.\n"
+ indian_diplomacy_under_3_available:0 " Less than §Y3§! active §YPropaganda Campaigns§!"
 
- organized_pacifism_category:0 "Organised Pacifism"
- organise_a_peaceful_protest_in_delhi:0 "Organise a Peaceful Protest in Delhi"
- organise_a_peaceful_protest_in_east_bengal:0 "Organise a Peaceful Protest in East Bengal"
- organise_a_peaceful_protest_in_west_bengal:0 "Organise a Peaceful Protest in West Bengal"
- organise_a_peaceful_protest_in_bombay:0 "Organise a Peaceful Protest in Bombay"
- organise_a_peaceful_protest_in_lucknow:0 "Organise a Peaceful Protest in Lucknow"
- organise_a_peaceful_protest_in_gujarat:0 "Organise a Peaceful Protest in Gujarat"
- organise_a_peaceful_protest_in_punjab:0 "Organise a Peaceful Protest in Punjab"
- organise_a_peaceful_protest_in_patna:0 "Organise a Peaceful Protest in Patna"
+ this_soldier_is_defending_india:0 "This Soldier is Defending India"
+ this_soldier_is_defending_india_desc:0 "\n§Y''This Soldier is Defending India,\nHe is Protecting his Home and his Family.''§!"
+ sons_of_the_empire:0 "Sons of the Empire"
+ sons_of_the_empire_desc:0 "\n§Y''Sons of the Empire - Canada, India & Australia''§!"
+ our_indian_warriors:0 "Our Indian Warriors"
+ our_indian_warriors_desc:0 "\n§Y''Our Indian Warriors,\nStaunch and True,\nHave proved their\nworth to all:\nTo guard the Flag\nthey dare and do -\nAt England's\nbattle call!''§!"
+ following_in_the_footsteps_of_dod:0 "Following in the Footsteps of the Dear Old Dad"
+ following_in_the_footsteps_of_dod_desc:0 "\n§Y''Following in the Footsteps of the Dear Old Dad''§! is a propaganda poster representing Britain as a lion in a British uniform, followed by its cubs, the other states of the Commonwealth."
+ outwhiskered:0 "Outwhiskered!"
+ outwhiskered_desc:0 "\n§Y''Outwhiskered!''§! is a propaganda poster showing a German soldier with a whiskered moustache being shocked by a brave Sikh soldier with a whiskered moustache and whiskered beard."
+ for_india_and_for_empire:0 "For India and for Empire"
+ for_india_and_for_empire_desc:0 "\nWe shall send newsletters and posters in regional Indian languages to the British public to support our brave Indian troops in their fight §Y''For India and for Empire''§!."
+ our_dusky_allies:0 "Our Dusky Allies"
+ our_dusky_allies_desc:0 "\n§Y''Our Dusky Allies''§! is a short film featuring footage of Indian soldiers, symbolising the unity within the Empire in the fight for freedom."
+ who_got_money_gun_uniform:0 "Who got that Money, Gun and Uniform?"
+ who_got_money_gun_uniform_desc:0 "\n§Y''Who Got that Money, Gun and Uniform? The One Who Shall Join the Army!''§!"
+ invest_in_victory:0 "Invest in Victory"
+ invest_in_victory_desc:0 "\n§Y''Invest in Victory, this shall help with fighting''§!"
 
  extrasubcontinental_theaters_category:0 "Extrasubcontinental Theaters"
  decision_cost_CP_25_PP_10:0 "£command_power  §Y15§! £pol_power  §Y10§!"
