--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4955,6 +4955,89 @@
  TUR_crack_down_on_the_romanian_resistance_desc:0 "Having a long history of rebelling against us, Romanians have proven to be unruly yet again. But this time, we'll crush their dreams of independence whatever the cost may be."
  TUR_increase_turkish_settlement_in_anatolia:0 "Increase Turkish Settlement in Anatolia"
  TUR_increase_turkish_settlement_in_anatolia_desc:0 "Though its a fact that Anatolia has a large non-Muslim population, a large part of these minorities are well, just minorities. We can easily make their presence insignificant by increasing Turkish population in those areas."
+
+
+
+
+
+
+
+#####romania
+
+disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve the Size of the Parliment§!'"
+disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
+
+pcd_leader:0 "Leader of the PCD"
+ROM_take_ionescu:0 "Take Ionsecu"
+
+ROM_land_reform_pass:0 "Land Reform Bill has Passed"
+ROM_land_reform_fail:0 "Land Reform Bill has Failed"
+land_reform_fail:0 "The land reform bill will §Rnot§! pass"
+ROM_bratianu_resign:0 "Bratianus' Resignation"
+ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land reform bill has proven to the king that the liberals have governed for long enough, and that its time for another party to bring a fresh face to governance. Lets have Bratianu resign, and have the conservative PC form a government."
+on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify '§YUnfinished Land Reform§!' by:\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!"
+ROM_king_carols_reign:0 "King Carols Reign"
+ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, had lead us well so far. With his great wisdom, Romania has gone from a rumpt puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
+ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
+ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
+ROM_our_duty_to_the_people:0 "Our Duty to the People"
+ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
+#events 
+ww1_romania.12.t:0 "Alexandru Marghiloman Proposes... Securing 'Election Security'"
+ww1_romania.12.d:0 "While the conservatives are the incumbents, theres still a reformist mood across much of country. Many political experts are calling the race a complete tossup, with some even saying the election leans towards the PNL. Another PNL government would be unacceptable, to say the least. Seeing the situation, Minister of the Interior Alexandru Marghiloman has proposed to Carp a way to secure our victory: tampering with the election. While of course not... morally great, it would indeed secure a win."
+ww1_romania.12.a:0 "What? Uh yeah, yeah that sounds great"
+ww1_romania.12.b:0 "Have some confidence in us, Marghiloman!"
+ww1_romania.11.t:0 "King Carol Requests We Mantain Previous PNL Land Reform"
+ww1_romania.11.d:0 "While the most recent PNL land reform bill failed, the PNL has indeed passed many significant reforms since the 1907 revolt. With conservatives in power, some in the party, including Carp, believe repealing some of these reforms should be considered. King Carol obviously disagrees, being the one who appointed the liberals in the first place. Now that conservatives have came into power, Carol has quested Carp take the position many in the conservatives have taken as of late: fully endorse previous land reform, and promise not to overturn it. This, Carol claims, is needed to mantain stability and avoid another 1907. While Carp may disagree, its clear Carol feels strongly on this issue. Opposing him here may lead him to be significantly less confident in our government."
+ww1_romania.11.a:0 "Letting the king dictate party policy would be a bad precedent"
+ww1_romania.11.b:0 "Don't worry, we agree these measures are reasonable"
+ww1_romania.10.t:0 "King Carol Requests Carp Reconcile the PCD"
+ww1_romania.10.d:0 "The PCD - formally known as the Partidul Conservator-Democrat, and its rivarly with the PC is widely known. Originating as a splinter from the PC, the PCD claims to be the most moderate of the main 3 Romanian parties. Generally being economically moderate while socially conservative, the PCD rose to popularity after it splintered from the PC, having ran multiple governments themselves. Now, with the first conservative government in years, King Carol is urgent to ensure it remains stable. With the PCD and the PC agreeing on many things, as well as most of the PCD party leaders having history in the PC, Carol sees an opprotunity for the 2 parties to form a centre right government. While Carp himself is personally opposed to the idea, its welcomed by many moderates in the party. Ensuring Carol supports the government will also be crucial to its survival. Is angering Carol really worth it here?"
+ww1_romania.10.a:0 "Respectfully your majesty, we'd be better without them"
+ww1_romania.10.b:0 "Alright, lets form a coalition government"
+ww1_romania.9.t:0 "Appointment of the PC"
+ww1_romania.9.d:0 "With the failure to pass land reform, Prime Minister Brătianu has decided to resign in protest. With the king being tasked to form a new government, its been decided to give the conservative PC party a chance to govern. While being out of power for the last few years, the PC has gone through a dramatic shift. Going from a outright elitist party, the PC has seen the need to change and thus the party has rebranded itself, shifting to the left on a variety of issues including labor rights and the economy. While Carol has appointed the PC to rule, Carol is no tyrant. Thus, elections set to take place in 1911 have been announced."
+ww1_romania.9.a:0 "Lets see how they do!"
+ww1_romania.8.t:0 "The Carol Mosque"
+ww1_romania.8.d:0 "While the muslims population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian muslims, as well as a act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanța, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
+ww1_romania.8.a:0 "We're an inclusive country!"
+ww1_romania.1.t:0 "The Puppet Master"
+ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as one of the most modern constitutions in the world at the time, with seperation of powers, an abolished death penalty, guaranteed private propriety, freedom of speech, and total freedom of the press. However, the Romanian constiution has had very little change since then, and thus Romania has fallen from one of the most democratic countries at its time, to the illiberal republic it is now.\n\nWhether is this a positive or negative development for Romania is debatable, but one thing cam be agreed upon by everyone: King Carols influence on the Romanian political system is immense, and has grown in recent times. King Carol has often simply rotated between forming a government with the liberal PNL, and the conservative PC, as well as the recently formed moderate PCD. This has lead to little actual reform in Romania, as opposing political parties overturn much of the reforms the last government passed. This culminated in a revolt by angry peasants in 1907, angered by the little reform passed by any government. Thus, King Carol has taken a new course, appointing a liberal government that has governed the country for the last 3 years straight, passing a suprisingly large amount of reforms as of recent, which has kept the peasants in line for now.\n\nWith the 1911 elections approaching, King Carols confidence in the liberals and their ability to govern has declined. Seeing it as time for a new party to get a chance to rule Romania, King Carol has been flirting with the idea of appoiting a conservative government, or atleast supporting the conservatives in the elections."
+ww1_romania.1.a:0 "The king is a very wise man"
+ww1_romania.1.b:0 "Lets hope he doesn't undermine Romanian democracy..."
+ww1_romania.2.t:0 "The Brătianu Land Reform Bill - Debate Begins"
+ww1_romania.2.d:0 "Prime minister Ion Brătian and the liberal party have finally finished drafting a new land reform bill that would give more power to the majority of Romanians, and now it just needs to pass in parliment, which may be harder said then done. Conservatives of course oppose the bill, but moderates, and the king are also wary. Most likely being out of touch, they see previous measures of the government as amble enough, and see this bill as risking a Romanian brain drain. Passing this bill won't be easy, and we will need careful maneuvering to get a majority of the votes."
+ww1_romania.2.a:0 "We'll get it done!"
+ww1_romania.4.t:0 ""The Brătianu Land Reform Bill - Convincing the PCD"
+ww1_romania.4.d:0 "The current make up of Romanias parliment means that convincing moderates to support the land reform bill will be required to pass it. Several members from the PCD, a splinter from the more conservative PC, seems somewhat open to the land reform bill we've proposed. Some do fear its a bit too extreme, but changing the bill at all may risk angering the more liberal members of our party, who may protest vote against the bill. What will our next course be?"
+ROM.4.c.tt:0 "The §cPCD§! will expect us to appoint an §Yadvisor§! from thier party if we win the next elections. If we do not, they will §Cfuse§! with the opposition, leading to its owm §Rconsequences§!!"
+ ww1_romania.3.t:0 ""The Brătianu Land Reform Bill - Landlords Petition the Government"
+ ww1_romania.3.d:0 "The all powerful landlords in Romania have protested our recent land reform bill currently being debated in parliment. Providing a variety of reasons why the bill would hurt Romanias society and economy, they've heavily encouraged us to abandon the bill all together. While they don't hold votes in parliment, their opposition to our government would hurt our position a lot, considerng their vast influence in the country"
+ ww1_romania.3.a:0 "Have they forgotten about 1907 so quickly? Onwards with the bill!"
+ ww1_romania.3.b:0 "They have some points, we can pick this up when the situation is more stable."
+ww1_romania.4.a:0 "Lets twist some arms"
+ww1_romania.4.b:0 "They're apart of our coalition, we can trust them"
+ww1_romania.4.c:0 "Offer the PCD significant say in our coalition if we win the next elections"
+ww1_romania.5.t:0 "The Brătianu Land Reform Bill - The Bill Fails"
+ww1_romania.5.d:0 "Bad news for the PNL: the major land reform bill proposed in recent has died in parliment. With the past land reform bills passing overwhelmingly, in part due to fear from the 1907 peasant revolution, many are suprised and worried to see the failure of this bill. While progress has been made, many feel its not enough, and the failure of the bill has lead to many peasants fearing that no more progress on the issue will be made. Either way, this news definitely won't help the popularity of the liberal governmen, even if the bill failing wasn't exactly their fault."
+ww1_romania.6.t:0 "The Brătianu Land Reform Bill - King Carol Expresses Concern"
+ww1_romania.6.d:0 "While King Carol explicitly supported the liberals in the aftermath of the 1907 peasant revolt, as well as the liberals land reform bills previously, King Carol has had his scepticism about the land reform bill currently being debated in the Romanian parliment. Seeing this bill as going too far, he's suggested to PNL leaders that they should scale back the bill for the sake of political stability. With the changes Carol is suggesting, the bill would mostly be lip service and thus his changes are unacceptable. King Carol coming out publicly against the bill would, however, be a disaster. While its very doubtful he would take drastic measures like disolving parliment over it, just him opposing the bill would surely lead to many in the PCD abandoning the bill, and thus leading to its death."
+ww1_romania.6.a:0 "The king opposes the bill, but does parliment?"
+ww1_romania.6.b:0 "Lets try to soothe his fears, we need his support on this one"
+ww1_romania.7.t:0 "The Brătianu Land Reform Bill - The Bill Passes!"
+ww1_romania.7.d:0 "While it was harder then expected, the recent land reform bill proposed to parliment has passed! King Carol as well as the general Romania populace have been worried as of late about the liberals competency in governance, and with this major bill, their fears should be soothed. While there is still progress to do, this bill is a pretty large step foward after a series of very minor reforms in the past year. "
+ww1_romania.7.a:0 "Great news for us!"
+#decision
+
+#idea
+ROM_kings_influence:0 "The Political King"
+
+
+
+
+
+
+
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
  TUR_promote_turkish_culture_in_aegean_desc:0 "There are still major Greek settlements in large Aegean cities. Though we cannot simply outpopulate them, we can assimilate them by promoting Turkish culture among the Anatolian Greeks."
  TUR_outpopulate_armenian_pockets:0 "Outpopulate Armenian Pockets"
