--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2805,9 +2805,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_industrialization_of_prahova_valley_desc:0 "The Prahova Valley is rich in natural resources which helps our economy, giving us an annual surplus of 5% of our GDP!"
  ROM_agricultural_economy:0 "Agricultural Economy"
  ROM_agricultural_economy_desc:0 "Centuries of Ottoman suzeranity and the rule of the Phanariots have made us an underdeveloped and agricultural country."
- ROM_memories_of_1907:0 "Memories of 1907"
- ROM_memories_of_1907_desc:0 "What originaly started as a small protest quickly turned into a nation-wide peasant revolt against the landlords. The Liberal government ended the revolt by sending the army  wich ruthlessy suppressed the pesants."
- ROM_inexperienced_army:0 "Inexperienced Army"
+ ROM_memories_of_1907:0 "Unfinished Land Reform"
+ ROM_memories_of_1907_desc:0 "The 1907 peasant revolution was a rude awakening for the elites in Romania - land reform cannot wait. While the governments of the past have indeed began slowly passing land reform legislation, theres still lots to be desired."
  ROM_inexperienced_army_desc:0 "Our army hasn't fought a proper war for almost 40 years. This unproven force cannot be relied upon..."
  ROM_inexperienced_army_tt:0 "§RThe true state of the army will be seen in the Great War!§!"
  
