--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,7 +4963,8 @@
 
 
 #####romania
-
+right_wing_populist:0 "Right Wing Populist"
+alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve the Size of the Parliment§!'"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
 
@@ -4983,6 +4984,16 @@ ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vas
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 #events 
+ww1_romania.15.t:0 "Alliance with the NDP?"
+ww1_romania.15.d:0 "With the PCD-PNL alliance announced, we have a chance to form our own electoral alliance. While the NDP isn't nearly as popular as the PCD, it does have its own small, yet loyal base of support. Additionally, alligning ourselves with the NDP will further symbolizes the PCD's shift towards the left economically. This could allow us to out-flank the PNL's economically left base, which would help us significantly.\n\nThe problem is, however, that the NDP could have its own baggade. The NDP is seen as very extreme by most of the country, and for good reason. The NDP has had its own history of using violence to gain political support, and some NDP members have... questionable takes on the Jewish community, to say the least. It would also anger King Carol, who already believes Carp may be too arogant and extreme to win an election."
+ww1_romania.15.a:0 "We'll fight fire with fire!"
+ww1_romania.15.b:0 "What do we have to gain from these fools?"
+ww1_romania.14.t:0 "PNL Announces Alliance with the PCD"
+ww1_romania.14.d:0 "With Carp rejecting the kings requests to reconcile the PCD, the PNL and PCD have announced an electoral coalition to oppose the PC. With this alliance, the tides have shifted against the PC and towards the PNL-PCD alliance. Although not ideal, we must remain confident about our chances next election. "
+ww1_romania.14.a:0 "They're desperate, clearly!"
+ww1_romania.13.t:0 "The Consensus of the Centre"
+ww1_romania.13.d:0 "The recent formation of the PC-PCD alliance has given the coalition a significant boost in the polls. While at first many predicted the race as a complete tossup, and some experts even seeing the election as leaning towards the PNL, the PC-PCD alliance has been gaining significant ground across the country. With the shift of the right towards the centre, peasants who were originally concerned the Conservatives would oppose new land reform have been softened, while many see the issues with the PNL and its corruption scandals."
+ww1_romania.13.a:0 "Its time to turn a new leaf!"
 ww1_romania.12.t:0 "Alexandru Marghiloman Proposes... Securing 'Election Security'"
 ww1_romania.12.d:0 "While the conservatives are the incumbents, theres still a reformist mood across much of country. Many political experts are calling the race a complete tossup, with some even saying the election leans towards the PNL. Another PNL government would be unacceptable, to say the least. Seeing the situation, Minister of the Interior Alexandru Marghiloman has proposed to Carp a way to secure our victory: tampering with the election. While of course not... morally great, it would indeed secure a win."
 ww1_romania.12.a:0 "What? Uh yeah, yeah that sounds great"
