RAJ Propaganda Campaigns Mechanic Mosltly Finished + Partially finish the "Supress" decisions UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8731,18 +8731,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  decision_cost_CP_25_PP_15_tooltip:0 "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
  RAJ_consolidate_indian_laws:0 "Consolidate Indian Laws"
  RAJ_promote_western_education:0 "Promote Western Education"
- RAJ_propaganda_campaign:0 "Propaganda Campaign"
- RAJ_supress_nationalist_newspaper:0 "Supress Nationalist Newspaper"
+ RAJ_supress_reformist_newspapers:0 "Supress Reformist Newspapers"
+ RAJ_supress_nationalist_newspapers:0 "Supress Nationalist Newspapers"
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
- decision_cost_PP_25:0 "£pol_power  §Y25§!"
- decision_cost_PP_25_blocked:0 "£pol_power  §Y25§!"
- decision_cost_PP_25_tooltip:0 "It costs £pol_power  §Y25§! to take the decision"
- decision_cost_PP_75:0 "£pol_power  §Y75§!"
- decision_cost_PP_75_blocked:0 "£pol_power  §Y75§!"
- decision_cost_PP_75_tooltip:0 "It costs £pol_power  §Y75§! to take the decision"
  RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
- RAJ_appease_the_indian_national_congress:0 "Appease the Indian National Congress"
- RAJ_appease_the_all_india_muslim_league:0 "Appease the All-India Muslim League"
  
  RAJ_survey_of_india_category:0 "Survey of India"
 
