Poland Push July

--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -8,6 +8,11 @@
  POL_radziwill_party:0 "House of Radziwiłł"
  POL_studnicki_party:0 "KPP"
  POL_studnicki_party_long:0 "Klub Państwowców Polskich"
+ 
+ POL_democratic_party_ZLN:0 "ZL-N"
+ POL_democratic_party_ZLN_long:0 "Związek Ludowo-Narodowy"
+ POL_poznan_government_party:0 "Rząd Obrony Narodowej"
+ POL_poznan_government_party_long:0 "Rząd Obrony Narodowej"
 
 
  ### Renamed/Late Game Parties ###
@@ -298,6 +303,21 @@
  POL_polish_merchant_navy_desc:0 ""
 
 
+ ###Balance of Power###
+ POL_chief_of_state_vs_sejm:0 "Sejm vs Chief of State Power Balance"
+ POL_sejm:0 "Sejm"
+ POL_chief_of_state:0 "Chief of State"
+ POL_chief_of_state_vs_sejm_balanced:0 "Influence Balanced"
+ POL_sejm_influence_absolute:0 "Absolute Sejm Influence"
+ POL_sejm_influence_high:0 "High Sejm Influence"
+ POL_sejm_influence_medium:0 "Medium Sejm Influence"
+ POL_sejm_influence_low:0 "Low Sejm Influence"
+ POL_chief_of_state_influence_absolute:0 "Absolute Chief of State Influence"
+ POL_chief_of_state_influence_high:0 "High Chief of State Influence"
+ POL_chief_of_state_influence_medium:0 "Medium Chief of State Influence"
+ POL_chief_of_state_influence_low:0 "Low Chief of State Influence"
+
+
 
 
 
@@ -321,6 +341,7 @@
  ### Political Advisors
  POL_prime_minister_red_pilsudskite:0 "Red Pilsudskite" #Prime Minister: Red Pilsudskite
  POL_prime_minister_ambassador_of_polish_affairs:0 "Ambassador of Polish Affairs" #Prime Minister: Ambassador of Polish Affairs
+ POL_prime_minister_nationalist_realist:0 "Nationalist Political Realist" #Prime Minister: Nationalist Realist
  POL_germanophile:0 "Polish Germanophile"
  POL_wojciech_trampczynski:0 "Wojciech Trąmpczyński"
  POL_marshal_of_sejm:0 "Marshal of the Sejm"
