RAJ Mios UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10439,7 +10439,7 @@ RAJ_nullify_the_partition_of_bengal:0 "Nullify the Partition of Bengal"
 RAJ_nullify_the_partition_of_bengal_desc:0 "In 1905, Lord Curzon, then Viceroy of India, made the decision to partition the Bengal presidency into more provinces, along religious lines. Although the partition was ostensibly designed to facilitate the administration of the regions, it was met with considerable resistance from the Indian population, particularly the §YIndian National Congress§!. In order to demonstrate our good will and commitment to the development of Bengal, it is imperative that the nullification of the partition of the province be enacted."
 RAJ_nullify_the_partition_of_bengal_reward:0 "Modify '§YDe-Industrialisation§!' by\nConstruction Speed:§R -15.00%§!"
 
-RAJ_indian_iron_and_steel_company:0 "Indian Iron and Steel Company"
+RAJ_indian_iron_and_steel_company:0 "Bengal Iron and Steel Company"
 RAJ_indian_iron_and_steel_company_desc:0 ""
 
 RAJ_hardinge_bridge_railway:0 "Hardinge's Bridge Railway"
