--- a/localisation/english/ww1_autonomy_l_english.yml
+++ b/localisation/english/ww1_autonomy_l_english.yml
@@ -6,6 +6,7 @@
  autonomy_tgwr_informal_protectorate:0 "Protected State"
  autonomy_tgwr_informal_protectorate_desc:0 "A protected state has a form of protection where it continues to retain an "international personality" and enjoys an agreed amount of independence in conducting its foreign policy."
  autonomy_tgwr_crownland:0 "Crownland"
+ autonomy_tgwr_princely_state:0 "Princely State"
  autonomy_tgwr_unilateral_union:0 "Unilateral Union"
  autonomy_tgwr_unilateral_union_desc:0 "The Cretan deputies declared unilateral union with Greece. The flag of the Cretan State was replaced by the Greek flag, all public servants took an oath to King Geórgios I of Greece, and the Greek constitution and laws were enacted on the island. This act was not recognized internationally, including by Greece."
  autonomy_tgwr_ottoman_emirate:0 "Ottoman Emirate"
