--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4967,10 +4967,18 @@ right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve the Size of the Parliment§!'"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
-
+ROM_romanian_army:0 "The Romanian Army"
+ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
+ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
+ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
+ROM_cement_the_churches_status:0 "Cement the Churches Status"
+ROM_cement_the_churches_status_desc:0 "Romania is a Christian nation first and foremost. With the churches wide spread influence in Romania, working with them is going to be necessary. We should reach out to them and offer them several concessions for their support."
 pcd_leader:0 "Leader of the PCD"
 ROM_take_ionescu:0 "Take Ionsecu"
-
+ ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
+ ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reform and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing"
+ROM_from_the_top_down:0 "Encourage Foreign Investment"
+ROM_from_the_top_down_desc:0 "The peasant class will do best when the economy does best. We need to continue industrialization, to create more low skill, medium pay factory jobs for the population. To do this, we should offer lucrative tax cuts to foreign companies wishing to invest in romania."
 ROM_land_reform_pass:0 "Land Reform Bill has Passed"
 ROM_land_reform_fail:0 "Land Reform Bill has Failed"
 land_reform_fail:0 "The land reform bill will §Rnot§! pass"
@@ -4984,6 +4992,13 @@ ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vas
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 #events 
+ROM_conservative_government:0 "Conservatives are in Power"
+ww1_romania.17.t:0 "PC Majority Elected!"
+ww1_romania.17.d:0 "The recently announced Romanian elections have came to an end. With the votes being counted up, the PC has been announced the winner of the elections, securing a quite large electoral landslide. With this, we will finally have the mandate to pass out agenda. The Romanian people still expect reforms to continue, so we must be careful in our leadership. Failing to govern properly could lead to King Carol outright dismissing us!"
+ww1_romania.17.a:0 "Finally! Let's get to governing"
+ww1_romania.16.t:0 "PC Accuses us of Corruption!"
+ww1_romania.16.d:0 "Members of the PC have been intensifying their attacks on us as of lately, this time accusing us of favortism in the cabinet. They claim the PNL government has been giving unqualified members cabinet positions just for their loyalty, instead of their merit. These are mostly baseless, but they're hurting our support amongst the population. King Carol has also expressed his concern about the issue privately with Bratianu, stating their may be some truth in it and that the PNL needs to reform itself. "
+ww1_romania.16.a:0 "It's lies and propaganda!"
 ww1_romania.15.t:0 "Alliance with the NDP?"
 ww1_romania.15.d:0 "With the PCD-PNL alliance announced, we have a chance to form our own electoral alliance. While the NDP isn't nearly as popular as the PCD, it does have its own small, yet loyal base of support. Additionally, alligning ourselves with the NDP will further symbolizes the PCD's shift towards the left economically. This could allow us to out-flank the PNL's economically left base, which would help us significantly.\n\nThe problem is, however, that the NDP could have its own baggade. The NDP is seen as very extreme by most of the country, and for good reason. The NDP has had its own history of using violence to gain political support, and some NDP members have... questionable takes on the Jewish community, to say the least. It would also anger King Carol, who already believes Carp may be too arogant and extreme to win an election."
 ww1_romania.15.a:0 "We'll fight fire with fire!"
@@ -5042,8 +5057,8 @@ ww1_romania.7.a:0 "Great news for us!"
 
 #idea
 ROM_kings_influence:0 "The Political King"
-
-
+ROM_influence_of_the_church:0 "Influence of the Church"
+ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
 
 
 
