--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4973,7 +4973,11 @@ ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
 ROM_cement_the_churches_status_desc:0 "Romania is a Christian nation first and foremost. With the churches wide spread influence in Romania, working with them is going to be necessary. We should reach out to them and offer them several concessions for their support."
+ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
+ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both the PNL and the PC was to reduce taxes on peasants. With a mandate, its time to fufill this promise and relieve the financial burden of the peasants."
 pcd_leader:0 "Leader of the PCD"
+ROM_mandatory_insurance:0 "Mandatory Insurance"
+ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
 ROM_take_ionescu:0 "Take Ionsecu"
  ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
  ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reform and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing"
@@ -5056,11 +5060,11 @@ ww1_romania.7.a:0 "Great news for us!"
 #decision
 
 #idea
+ROM_mandated_insurance:0 "Mandated Insurance"
 ROM_kings_influence:0 "The Political King"
 ROM_influence_of_the_church:0 "Influence of the Church"
-ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
 
-
+ROM_blue_law_overturned:0 "Overturned Blue Law"
 
 
 
