RAJ Industrial concern (Partially Finished) UPDATE

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2837,9 +2837,13 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
 
  #British Raj
  RAJ_idea_independence_war:0 "Independence War"
-
- RAJ_imperial_bank_of_india_trait:0 "Central Bank"
- RAJ_imperial_bank_of_india_mio:0 "Imperial Bank of India"
+ 
+ RAJ_andrew_yule_and_co_concern:0 "Andrew Yule & Co."
+ RAJ_wadai_group_concern:0 "Wadai Group"
+ RAJ_bengal_iron_and_steel_company_concern:0 "BISC"
+ RAJ_indian_railways_concern:0 "Indian Railways"
+ RAJ_imperial_bank_of_india_concern:0 "Imperial Bank of India"
+ RAJ_imperial_bank_of_india_trait:0 "Imperial Bank"
  unlock_imperial_bank_of_india.tt:0 "Unlocks §YIndustrial Concern§!: §YImperial Bank of India§!"
 
  RAJ_bloated_legal_apparatus:0 "Bloated Legal Apparatus"
