--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,8 @@
 
 
 #####romania
+ROM_the_burdens_they_endure:0 "The Burdens They Bear"
+ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
 right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve the Size of the Parliment§!'"
