--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5062,6 +5062,7 @@ ww1_romania.7.a:0 "Great news for us!"
 #decision
 
 #idea
+ROM_soldiers_benefits:0 "Soldier Benefits"
 ROM_mandated_insurance:0 "Mandated Insurance"
 ROM_kings_influence:0 "The Political King"
 ROM_influence_of_the_church:0 "Influence of the Church"
