--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,8 @@
 
 
 #####romania
+ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
+ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it."
 ROM_the_burdens_they_endure:0 "The Burdens They Bear"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
 right_wing_populist:0 "Right Wing Populist"
@@ -5062,7 +5064,9 @@ ww1_romania.7.a:0 "Great news for us!"
 #decision
 
 #idea
+
 ROM_soldiers_benefits:0 "Soldier Benefits"
+ROM_left_wing_protesters:0 "Left Wing Protesters"
 ROM_mandated_insurance:0 "Mandated Insurance"
 ROM_kings_influence:0 "The Political King"
 ROM_influence_of_the_church:0 "Influence of the Church"
