--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,8 @@
 
 
 #####romania
+ROM_prahova_valley:0 "Expand Prahova Valley"
+ROM_prahova_valley_desc:0 "The prahovan valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the prahovan valley for our continued economic development"
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
 ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it."
 ROM_the_burdens_they_endure:0 "The Burdens They Bear"
