--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,8 @@
 
 
 #####romania
+ROM_develop_the_north:0 "Develop Northern Infrastructure"
+ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
 ROM_prahova_valley:0 "Expand Prahova Valley"
 ROM_prahova_valley_desc:0 "The prahovan valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the prahovan valley for our continued economic development"
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
